# myrmex

./: .gitignore  CHANGELOG.md  Cargo.toml
docs/: Roadmap.md  Thoughts.md  notebook.md
docs/models/blocks/: Soil.md  Water.md  Weather.md
docs/models/phenomena/: Time.md
docs/plans/: Air.md  Home.md  Notes.md  Rock.md  Sky.md  Soil.md  Water.md
docs/plans/phenomena/: Time.md
docs/requirements/: Updates.md  v0.1.0.md
docs/versions/: v0.1.md  v1.0.md
src/: camera.rs  gui.rs  home.rs  main.rs  menu.rs  menus.rs  save.rs  state.rs
src/app/: height.rs  load.rs  menu.rs  mod.rs  tilemap.rs
src/gui/: colors.rs  fonts.rs  menu.rs  mod.rs  top_bottom_panel.rs  visuals.rs  window.rs  world_properties.rs
