[package]
name = "myrmex"
version = "0.1.0"
edition = "2021"

[features]
default = ["render"]
bevy_render = ["bevy_egui/render"]
atlas = []
render = []

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_winit",
    "multi_threaded",
] }
bevy_ecs_tilemap = "0.14.0"
bevy_egui = "0.30"
bevy-inspector-egui = "0.27"
bevy_window = "0.14.0"
egui="0.29"
