[package]
name = "myrmex"
version = "0.1.0"
edition = "2021"

[features]
default = ["render"]
bevy_render = ["bevy_egui/render"]
atlas = []
render = []

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "png",
    "bevy_winit",
    "multi_threaded",
] }
bevy_ecs_tilemap = "0.14.0"
bevy_egui = "0.30"
bevy-inspector-egui = "0.27"
bevy_window = "0.14.0"
egui="0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Most aggressive optimizations possible
[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
